Kill tooltips on mobile, fix error in json

--- a/style.css
+++ b/style.css
@@ -95,6 +95,9 @@ ul {
     #legend-container {
         display: none;
     }
+    .tooltip {
+        display: none;
+    }
 }
 
 @media only screen and (min-width: 726px) {
